添加天气显示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.WeatherActivity">
+        </activity>
+        <service android:name=".service.AutoUpdateService"></service>
+        <receiver android:name=".recevier.AutoUpdateReceiver"></receiver>
     </application>
 
 </manifest>
